CAS-936 Add support for fetching CRL URIs that may contain illegal characters per URI encoding guidelines in RFC 2396.  This support is needed to accommodate EJBCA.